workspace = { members = ["proc_macros", "util_procs_internal"] }

[package]
name = "util_procs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"proc_macros" = { path = "proc_macros" }
"util_procs_internal" = { path = "util_procs_internal" }
