[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
quote = "1.0.33"
prettyplease = "0.2.15"
macrotest = "1.0.9"
"util_procs_internal" = { path = "../util_procs_internal/" }
